--- a/index.css
+++ b/index.css
@@ -8,8 +8,19 @@
     font-family: 'luckiestGuy'; 
     src: url('fonts/LuckiestGuy-Regular.ttf') format('truetype');
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+header {
+    background-color: rgb(159, 70, 94);
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
 body {
-    background-color: rgb(251, 133, 117);
+    background-color: rgb(163, 72, 105);
     text-align: center;
     font-family: luckiestGuy, cursive;
     font-size: 40px;
@@ -20,6 +31,8 @@ a {
     color: rgb(219, 217, 217);  
 }
 ul {
+    justify-content: space-between;
+    display: flex;
     list-style-type: none;
     padding: 0; 
     font-family: luckiestGuy, cursive;
@@ -32,6 +45,11 @@ h3 {
 }
 p {
     color: rgb(219, 217, 217);  
-    font-size: 22px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+    font-size: 19px;
+    font-family: frijole, cursive;
+    margin-left: 222px;
+    margin-right: 222px;
+    margin-top: 12px;
+    margin-bottom: 12px;
 }
