--- a/cadastro.css
+++ b/cadastro.css
@@ -12,7 +12,39 @@ body {
     text-align: center;
     font-family: luckiestGuy, cursive;
     font-size: 40px;
-    a {
+}   
+a {
     text-decoration: none;  
     color: rgb(219, 217, 217);  
     text-shadow: 4px 4px 4px rgba(3, 3, 3, 0.3);
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+header {
+    background-color: rgb(182, 101, 101);
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+main {
+    color: rgb(3, 22, 34);
+    margin-top: 20px;
+    font-family: bungee, cursive;
+    font-size: 30px;
+}
+input {
+    font-family: bungee, cursive;
+    font-size: 14px;
+    padding: 10px;
+    border: 2px solid rgb(3, 22, 34);
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+h3 {
+    margin-bottom:25px;
+    margin-top: 35px;
+}
